tests/baselines/reference/YieldExpression12_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression12_es6.ts(3,6): error TS1163: 'yield' expression must be contained within a generator declaration.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression12_es6.ts (1 errors) ====
    class C {
      constructor() {
         yield foo
         ~~~~~
!!! error TS1163: 'yield' expression must be contained within a generator declaration.
      }
    }